# Crow-Web-Test

./: CMakeLists.txt  LICENSE  main.cpp  mv_templs.sh  run.sh
include/: crow_all.h  parseBody.h  sysinfo.h
static/css/: main.css
templates/: create-post.html  header.html  hero.html  index.html
